Dodavanje Proizvodi i uslugi i izmeni

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Технопласт Инженеринг</title>
 <link rel="stylesheet" type="text/css" href="./css/normalize.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -18,79 +20,44 @@
 		<li><a href="#"><img src="./images/logo.png"></a></li>
 		</ul>
 		<br />
-		<!-- <ul class="navigacija">
-		<li><a href="./index.html">Почетна</a></li>
-		<li><a href="./zaNas.html">За Нас</a></li>
-		<li><a href="#">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
-		<li><a href="./kontakt.html">Контакт</a></li>
-		</ul> -->
 	</div>
 </div>
 <div class="nav">
 <ul class="navigacija">
 		<li class="aktiven"><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
-		<li><a href="#">Производи и услуги</a></li>
+		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
 		<li><a href="#">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 </div>
-<!-- <div class="jumbotron">
-<div class="container">
-<h1>
-Квалитет до последната капка</h1>
-</div> -->
-<div class="flicker-example" data-auto-flick-delay="3" data-theme="light">
+
+
+<div class="flicker-example" data-auto-flick-delay="5" data-theme="light">
     <ul>
         <li data-background="./images/jumbotron.jpg">    
         </li>
+		
         <li data-background="./images/jumbotron1.jpg">
-
         </li>
+		
         <li data-background="./images/jumbotron2.jpg">
+        </li>
+		
+		<li data-background="./images/jumbotron3.jpg">
+        </li>
+		
+		<li data-background="./images/jumbotron4.jpg">
+        </li>
+		
+		<li data-background="./images/jumbotron5.jpg">
+        </li>
+		
+		<li data-background="./images/jumbotron6.jpg">
         </li>
     </ul>
 </div>
 
-
-
-<div class="proizvodi">
-	<div class="container">
-		<h2>Производи</h2>
-		<p>
-			Нашата компанија ви нуди високо квалитетни производи и најпрофесионални услуги.
-		</p>
-		<div class="row">
-			<div class="col-md-4">
-				<div class="thumbnail">
-					<img src="./images/slika1.jpg">
-				</div>
-
-				<div class="thumbnail">
-					<img src="./images/slika2.jpg">
-				</div>
-			</div>
-
-						<div class="col-md-4">
-				<div class="thumbnail">
-					<img src="./images/slika4.jpg">
-				</div>
-
-				<div class="thumbnail">
-					<img src="./images/slika5.jpg">
-				</div>
-			</div>
-						<div class="col-md-4">
-				<div class="thumbnail">
-					<img src="./images/slika3.jpg">
-				</div>
-			</div>
-			
-		</div>
-	</div>
-
-</div>
 <div class="uslugi">
 	<div class="container">
 		<div class="row">
@@ -130,6 +97,47 @@
 	
 	</div>
 </div>
+
+
+<!-- <div class="proizvodi">
+	<div class="container">
+		<h2>Производи и услуги</h2>
+		<p>
+			<b>Технопласт Инженеринг</b> ви нуди квалитет до последна капка.
+		</p>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="./images/slika1.jpg">
+				</div>
+
+				<div class="thumbnail">
+					<img src="./images/slika2.jpg">
+				</div>
+			</div>
+
+						<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="./images/slika4.jpg">
+				</div>
+
+				<div class="thumbnail">
+					<img src="./images/slika5.jpg">
+				</div>
+			</div>
+						<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="./images/slika3.jpg">
+				</div>
+			</div>
+			
+		</div>
+	</div>
+
+</div> -->
+
+
+
 <div class="footer">
 	<div class="container">
 		<ul class="logo">
@@ -138,7 +146,7 @@
 		<ul class="navigacija_footer">
 		<li><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
-		<li><a href="#">Производи и услуги</a></li>
+		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
 		<li><a href="#">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
