--- a/zaNas.html
+++ b/zaNas.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Технопласт Инженеринг</title>
 <link rel="stylesheet" type="text/css" href="./css/normalize.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -18,7 +20,7 @@
 		<ul class="navigacija">
 		<li><a href="./index.html">Почетна</a></li>
 		<li class="aktiven"><a href="./zaNas.html">За Нас</a></li>
-		<li><a href="#">Производи и услуги</a></li>
+		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
 		<li><a href="#">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
@@ -74,7 +76,7 @@
 		<ul class="navigacija_footer">
 		<li><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
-		<li><a href="#">Производи и услуги</a></li>
+		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
 		<li><a href="#">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
