dodavanje na novosti.html i izmenuvanje na postoecki file-ovi

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<li class="aktiven"><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
 		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
+		<li><a href="./novosti.html">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 </div>
@@ -147,7 +147,7 @@
 		<li><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
 		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
+		<li><a href="./novosti.html">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 		<ul class="copyright">
