--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
 		<li><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
 		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
+		<li><a href="./novosti.html">Новости</a></li>
 		<li class="aktiven"><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 	</div>
@@ -31,7 +31,7 @@
 				<div class="row">
 					<div class="col-md-8">
 					<div class="contact_header"><h2>Контакт</h2></div></br>
-					<form method="POST" action="//forms.brace.io/tehnoplast_ing@t-home.mk">
+					<form>
   
 						<div class="contact-info-group">
 
@@ -81,7 +81,7 @@
 		<li><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
 		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
+		<li><a href="./novosti.html">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 		<ul class="copyright">
