--- a/zaNas.html
+++ b/zaNas.html
@@ -21,7 +21,7 @@
 		<li><a href="./index.html">Почетна</a></li>
 		<li class="aktiven"><a href="./zaNas.html">За Нас</a></li>
 		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
+		<li><a href="./novosti.html">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 	</div>
@@ -48,13 +48,13 @@
 				<div class="thumbnail">
 				<img src="./images/zaNas1.jpg">
 				</div>			
-			</div>
-			<div class="col-md-3">
-			
+			</div></div>
+			<div class="col-md-6"></div>
+			<div class="col-md-2">
 				<div class="thumbnail">
 				<a href="./images/certEN.png"><img src="./images/certEN.png"></a></div></div>
-				
-				<div class="col-md-3">
+				<div class="col-md-2"></div>
+				<div class="col-md-2">
 				<div class="thumbnail">
 				<a href="./images/certMK.png"><img src="./images/certMK.png"></a></div>
 				
@@ -77,7 +77,7 @@
 		<li><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
 		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
+		<li><a href="./novosti.html">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 		<ul class="copyright">
