--- a/proizvodiUslugi.html
+++ b/proizvodiUslugi.html
@@ -21,7 +21,7 @@
 		<li><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
 		<li class="aktiven"><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
+		<li><a href="./novosti.html">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 	</div>
@@ -37,7 +37,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img src="./images/jumbotron1.jpg">
+						<img src="./images/2/jumbotron1.jpg">
 					</div>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 				<div class="row">
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img src="./images/proektiranje.jpg">
+						<img src="./images/2/proektiranje.jpg">
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -60,7 +60,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img src="./images/montiranje.jpg">
+						<img src="./images/2/montiranje.jpg">
 					</div>
 				</div>
 			</div>
@@ -68,7 +68,7 @@
 				<div class="row">
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img src="./images/slika4.jpg">
+						<img src="./images/2/slika4.jpg">
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -83,17 +83,17 @@
 				</div>
 				<div class="col-md-2">
 					<div class="thumbnail">
-						<img src="./images/1/1.jpg">
+						<img src="./images/2/5.jpg">
 					</div>
 					<div class="thumbnail">
-						<img src="./images/1/2.jpg">
+						<img src="./images/2/6.jpg">
 					</div></div>
 					<div class="col-md-2">
 					<div class="thumbnail">
-						<img src="./images/1/3.jpg">
+						<img src="./images/2/7.jpg">
 					</div>
 					<div class="thumbnail">
-						<img src="./images/1/4.jpg">
+						<img src="./images/2/8.jpg">
 					</div>
 					
 				</div>
@@ -102,7 +102,7 @@
 				<div class="row">
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img src="./images/slika51.jpg">
+						<img src="./images/2/slika51.jpg">
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -119,11 +119,20 @@
 					<div class="thumbnail">
 						<img src="./images/2/1.jpg">
 					</div>
-					<div class="thumbnail">
-						<img src="./images/2/2.jpg">
-					</div></div>
+					<!-- <div class="thumbnail">
+						<img src="./images/2/3.jpg">
+					</div> --></div>
 				<div class="col-md-2">
 				<div class="thumbnail">
+						<img src="./images/2/2.jpg"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<p>Custom text can be entered using a query string at the very end of the url. This is optional, default is the image dimensions (300×250). A-z (upper and lowercase), numbers, and most symbols will work just fine</p>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
 						<img src="./images/2/3.jpg"></div>
 				</div>
 			</div>
@@ -141,7 +150,7 @@
 		<li><a href="./index.html">Почетна</a></li>
 		<li><a href="./zaNas.html">За Нас</a></li>
 		<li><a href="./proizvodiUslugi.html">Производи и услуги</a></li>
-		<li><a href="#">Новости</a></li>
+		<li><a href="./novosti.html">Новости</a></li>
 		<li><a href="./kontakt.html">Контакт</a></li>
 		</ul>
 		<ul class="copyright">
